# Falcon

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
config/: default.toml
crates/falcon-api/: Cargo.toml
crates/falcon-api/assets/: dashboard.html  ui_cache.html  ui_kv.html  ui_pubsub.html  ui_queue.html  ui_stream.html
crates/falcon-api/src/: lib.rs  server.rs  state.rs
crates/falcon-api/src/rest/: config.rs  error.rs  handlers.rs  messaging.rs  mod.rs  simple.rs  streams.rs
crates/falcon-api/src/ws/: handler.rs  protocol.rs
crates/falcon-api/tests/: auth.rs  feature_gating.rs  observability.rs  streams_api.rs  ws_subscribe.rs
crates/falcon-bench/: Cargo.toml
crates/falcon-bench/src/: main.rs  subsystems.rs  target_kvstore.rs  target_wire.rs  workload.rs
crates/falcon-cli/: Cargo.toml
crates/falcon-cli/src/: cli.rs  client.rs  features.rs  install.rs  main.rs  replication.rs  serve.rs
crates/falcon-core/: Cargo.toml
crates/falcon-core/src/: config.rs  feature.rs  keyspace.rs  lib.rs  node.rs  profile.rs  tls.rs
crates/falcon-core/tests/: multi_leader.rs  ttl.rs
crates/falcon-events/: Cargo.toml
crates/falcon-events/src/: bus.rs  event.rs  hlc.rs  lib.rs
crates/falcon-messaging/: Cargo.toml
crates/falcon-messaging/src/: error.rs  lib.rs  log.rs  queue.rs  stream.rs  topic.rs
crates/falcon-messaging/tests/: messaging.rs  stream.rs
crates/falcon-metrics/: Cargo.toml
crates/falcon-metrics/src/: histogram.rs  lib.rs  registry.rs
crates/falcon-proto/: Cargo.toml
crates/falcon-proto/proto/: replication.proto
crates/falcon-proto/src/: lib.rs
crates/falcon-replication/: Cargo.toml
crates/falcon-replication/src/: client.rs  lib.rs  log_reader.rs  server.rs
crates/falcon-storage/: Cargo.toml
crates/falcon-storage/src/: cold.rs  engine.rs  file_per_key.rs  hot.rs  lib.rs  lock_table.rs  object_store.rs  remote_store.rs  s3_store.rs  sharded_store.rs  tiered.rs  wal.rs  wal_writer.rs  warm.rs
crates/falcon-storage/tests/: compaction.rs  concurrency.rs  conformance.rs  file_per_key.rs  fsync_policy.rs  group_commit.rs  lww.rs  pluggable_backend.rs  replog_ordering.rs  sharded_store.rs  sparse_index.rs  tiered.rs  wal_recovery.rs
crates/falcon-wire/: Cargo.toml
crates/falcon-wire/src/: codec.rs  conn.rs  lib.rs  protocol.rs
crates/falcon-wire/tests/: auth_wire.rs  messaging_wire.rs  pipelining.rs
docker/: Dockerfile  docker-compose.yml
docs/: README.md  architecture.md  cache.md  compare.md  kv.md  pubsub.md  queue.md  stream.md
