[package]
name = "falcon-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["cold", "s3"]
cold = ["falcon-core/cold"]
s3 = ["falcon-core/s3"]

[dependencies]
falcon-core = { workspace = true, default-features = false }
falcon-events = { workspace = true }
falcon-storage = { workspace = true }
falcon-messaging = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
