[package]
name = "falcon-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["cold", "remote"]
cold = ["falcon-core/cold"]
remote = ["falcon-core/remote"]

[dependencies]
falcon-core = { workspace = true, default-features = false }
falcon-events = { workspace = true }
falcon-storage = { workspace = true }
falcon-messaging = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
axum = { workspace = true }
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
tower = "0.5"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
