[package]
name = "falcon-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "falcon"
path = "src/main.rs"

[dependencies]
falcon-core = { workspace = true }
falcon-storage = { workspace = true }
falcon-api = { workspace = true }
falcon-wire = { workspace = true }
falcon-replication = { workspace = true }
falcon-proto = { workspace = true }
falcon-events = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = { workspace = true }
