[package]
name = "falcon-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
falcon-events = { workspace = true }
falcon-storage = { workspace = true }
falcon-messaging = { workspace = true }
falcon-metrics = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
