[package]
name = "falcon-replication"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
falcon-events = { workspace = true }
falcon-storage = { workspace = true }
falcon-proto = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
async-stream = "0.3"
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
