[package]
name = "falcon-replication"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["cold"]
# Replicating the cold/tiered tiers needs those engines compiled in.
cold = ["falcon-storage/cold"]

[dependencies]
falcon-core = { workspace = true, default-features = false }
falcon-events = { workspace = true }
falcon-storage = { workspace = true }
falcon-proto = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
async-stream = "0.3"
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
