[package]
name = "falcon-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Default keeps every backend so the `full` build is unchanged.
default = ["cold", "remote"]
# `cold` pulls sled (the on-disk cold tier, and the tiered tier that layers a
# RAM working set over it). A build that needs neither omits sled entirely.
cold = ["dep:sled"]
# `remote` pulls the third-party object-store backend and its signing deps.
# Only compiled when a build actually wants remote storage.
remote = ["dep:reqwest", "dep:hmac", "dep:sha2", "dep:hex", "dep:urlencoding", "dep:time"]

[dependencies]
falcon-events = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
sled = { workspace = true, optional = true }
# Remote backend (feature = "remote"): a minimal SigV4 signer over reqwest so any
# object store works without a heavy SDK.
reqwest = { version = "0.12", features = ["blocking"], optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
urlencoding = { version = "2", optional = true }
time = { version = "0.3", features = ["formatting"], optional = true }

[dev-dependencies]
tempfile = "3"
