[package]
name = "falcon-wire"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
falcon-core = { workspace = true, default-features = false }
falcon-messaging = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
falcon-api = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
bytes = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
